Include lptread as build args

--- a/YSFGateway.vcxproj
+++ b/YSFGateway.vcxproj
@@ -113,7 +113,11 @@
     <ClInclude Include="YSFPayload.h" />
     <ClInclude Include="YSFReflectors.h" />
   </ItemGroup>
-  <ItemDefinitionGroup />
+  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|ARM'">
+    <Link>
+      <AdditionalOptions>-lpthread</AdditionalOptions>
+    </Link>
+  </ItemDefinitionGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets" />
 </Project>
